WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273057
[view-transitions] Replaced content rect offset isn't respected when using layer attachment
https://bugs.webkit.org/show_bug.cgi?id=273057
Summary
[view-transitions] Replaced content rect offset isn't respected when using la...
Matt Woodrow
Reported
2024-04-22 01:21:49 PDT
If the 'replaced content rect' starts outside of the content box (like happens with `object-fit: none;`), then the layer attachment path doesn't handle this correctly.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-04-22 01:27:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27572
Radar WebKit Bug Importer
Comment 2
2024-04-22 08:58:27 PDT
<
rdar://problem/126863911
>
EWS
Comment 3
2024-04-22 14:58:04 PDT
Committed
277835@main
(ff9ceff0e3c7): <
https://commits.webkit.org/277835@main
> Reviewed commits have been landed. Closing PR #27572 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug