[view-transitions] Replaced content rect offset isn't respected when using layer attachment. https://bugs.webkit.org/show_bug.cgi?id=273057

Reviewed by Tim Nguyen.

If the 'replaced content rect' starts outside of the content box (like happens with
`object-fit: none;`), then the layer attachment path doesn't handle this correctly.

Moves the addition of the replaced content rect location into the stored local overflow,
rather than doing so in a temporary in the painting code.

Adjusts the position of the attached layer by the difference between the renderer's
visual overflow rect, and where the capture layer actually begins (the local overflow
rect for the capture).

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateTransform):
(WebCore::RenderLayerBacking::updateChildrenTransformAndAnchorPoint):
* Source/WebCore/rendering/RenderViewTransitionCapture.cpp:
(WebCore::RenderViewTransitionCapture::paintReplaced):
(WebCore::RenderViewTransitionCapture::layout):
(WebCore::RenderViewTransitionCapture::updateFromStyle):
(WebCore::RenderViewTransitionCapture::captureContentInset const):
(WebCore::RenderViewTransitionCapture::debugDescription const):
* Source/WebCore/rendering/RenderViewTransitionCapture.h:

Canonical link: https://commits.webkit.org/277835@main