Source/WebCore/rendering/RenderViewTransitionCapture.h
@@ -44,10 +44,17 @@ public:
     void layout() override;
 
     FloatSize scale() const { return m_scale; }
+
+    // Rect covered by the captured contents, relative to the
+    // intrinsic size.
     LayoutRect captureOverflowRect() const { return m_overflowRect; }
 
+    // Inset of the scaled capture from the visualOverflowRect()
+    LayoutPoint captureContentInset() const;
+
 private:
-    ASCIILiteral renderName() const override { return style().pseudoElementType() == PseudoId::ViewTransitionNew ? "RenderViewTransitionNew"_s : "RenderViewTransitionOld"_s; }
+    ASCIILiteral renderName() const override { return "RenderViewTransitionCapture"_s; }
+    String debugDescription() const override;
 
     RefPtr<ImageBuffer> m_oldImage;
     LayoutRect m_overflowRect;
